tests/typing/good/testfile-subtype-3.scala

class A {}
class B extends A { def m(b: B) : A = { return b } }
object Main { def main(args: Array[String]) { } }
