tests/typing/bad/testfile-equal2-1.scala
class A {def m() { var b: Boolean = true == 1 } }
object Main { def main(args: Array[String]) { } }
